<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Payment">

    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtMonthlyPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txtPayment"
        android:textAlignment="center"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imgYears"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imgDescription"
        android:layout_marginBottom="5dp"
        app:srcCompat="@drawable/car" />
</LinearLayout>